cambios para safari

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <meta name="description" content="Aplicación PWA de productos Graiman - Porcelanato y Regaderas de alta calidad" />
     <meta name="keywords" content="Graiman, PWA, Porcelanato, Regaderas, Construcción, Baños" />
     
-    <!-- Apple Meta Tags -->
+    <!-- Apple Meta Tags para PWA -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Graiman PWA" />
+    <meta name="apple-touch-fullscreen" content="yes" />
     <link rel="apple-touch-icon" href="/apple-icon-180x180.png" />
+    <link rel="apple-touch-startup-image" href="/pwa-512x512.png" />
     
     <!-- Microsoft Meta Tags -->
     <meta name="msapplication-TileColor" content="#008296" />
